apply plugin: 'java'
apply plugin: 'application'

version = 0.1
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    jcenter()
}

mainClassName = "com.mkaminski.stemmer.KaminskiStemmerRunner"

jar {
    manifest {
        attributes("Implementation-Vendor": "Mateusz Kamiński",
        "Implementation-Version": 1.0,
        "Created-By": "Mateusz Kamiński",
        'Main-Class': 'com.mkaminski.stemmer.KaminskiStemmerRunner')
    }
}

dependencies {
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'

    compile 'de.ruedigermoeller:fst:2.56'

    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.2'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.2'

    testCompile group: 'org.carrot2', name: 'morfologik-tools', version: '2.1.4'
    testCompile group: 'org.carrot2', name: 'morfologik-polish', version: '2.1.4'

}
